--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
     "watchify": "^4.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.4.1"
   }
 }
